[package]
name = "polkadot-statement-table"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
parity-scale-codec = { version = "3.3.0", default-features = false, features = ["derive"] }
sp-core = { git = "https://github.com/Cardinal-Cryptography/substrate", branch = "obrok/aleph-v0.9.41-wasmtime8" }
primitives = { package = "polkadot-primitives", path = "../primitives" }
