[package]
name = "polkadot-primitives-test-helpers"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
sp-keyring = { git = "https://github.com/Cardinal-Cryptography/substrate", branch = "obrok/aleph-v0.9.41-wasmtime8" }
sp-application-crypto = { package = "sp-application-crypto", git = "https://github.com/Cardinal-Cryptography/substrate", default-features = false , branch = "obrok/aleph-v0.9.41-wasmtime8" }
sp-runtime = { git = "https://github.com/Cardinal-Cryptography/substrate", branch = "obrok/aleph-v0.9.41-wasmtime8" }
sp-core = { git = "https://github.com/Cardinal-Cryptography/substrate", features = ["std"] , branch = "obrok/aleph-v0.9.41-wasmtime8" }
polkadot-primitives = { path = "../" }
rand = "0.8.5"
