[package]
name = "pallet-xcm"
authors.workspace = true
edition.workspace = true
version.workspace = true


[dependencies]
bounded-collections = { version = "0.1.5", default-features = false }
codec = { package = "parity-scale-codec", version = "3.3.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }
serde = { version = "1.0.137", optional = true, features = ["derive"] }
log = { version = "0.4.17", default-features = false }

frame-benchmarking = { git = "https://github.com/Cardinal-Cryptography/substrate", default-features = false, optional = true , branch = "obrok/aleph-v0.9.41-wasmtime8" }
frame-support = { git = "https://github.com/Cardinal-Cryptography/substrate", default-features = false, branch = "obrok/aleph-v0.9.41-wasmtime8" }
frame-system = { git = "https://github.com/Cardinal-Cryptography/substrate", default-features = false, branch = "obrok/aleph-v0.9.41-wasmtime8" }
sp-core = { git = "https://github.com/Cardinal-Cryptography/substrate", default-features = false, branch = "obrok/aleph-v0.9.41-wasmtime8" }
sp-io = { git = "https://github.com/Cardinal-Cryptography/substrate", default-features = false, branch = "obrok/aleph-v0.9.41-wasmtime8" }
sp-runtime = { git = "https://github.com/Cardinal-Cryptography/substrate", default-features = false, branch = "obrok/aleph-v0.9.41-wasmtime8" }
sp-std = { git = "https://github.com/Cardinal-Cryptography/substrate", default-features = false, branch = "obrok/aleph-v0.9.41-wasmtime8" }

xcm = { path = "..", default-features = false }
xcm-executor = { path = "../xcm-executor", default-features = false }

[dev-dependencies]
pallet-balances = { git = "https://github.com/Cardinal-Cryptography/substrate", branch = "obrok/aleph-v0.9.41-wasmtime8" }
polkadot-runtime-parachains = { path = "../../runtime/parachains" }
polkadot-parachain = { path = "../../parachain" }
xcm-builder = { path = "../xcm-builder" }

[features]
default = ["std"]
std = [
	"bounded-collections/std",
	"codec/std",
	"scale-info/std",
	"serde",
	"sp-std/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"xcm/std",
	"xcm-executor/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
