[package]
name = "xcm-builder"
description = "Tools & types for building with XCM and its executor."
authors.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
impl-trait-for-tuples = "0.2.1"
parity-scale-codec = { version = "3.3.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }
xcm = { path = "..", default-features = false }
xcm-executor = { path = "../xcm-executor", default-features = false }
sp-std = { git = "https://github.com/Cardinal-Cryptography/substrate", default-features = false , branch = "obrok/aleph-v0.9.41-wasmtime8" }
sp-arithmetic = { git = "https://github.com/Cardinal-Cryptography/substrate", default-features = false , branch = "obrok/aleph-v0.9.41-wasmtime8" }
sp-io = { git = "https://github.com/Cardinal-Cryptography/substrate", default-features = false , branch = "obrok/aleph-v0.9.41-wasmtime8" }
sp-runtime = { git = "https://github.com/Cardinal-Cryptography/substrate", default-features = false , branch = "obrok/aleph-v0.9.41-wasmtime8" }
frame-support = { git = "https://github.com/Cardinal-Cryptography/substrate", default-features = false , branch = "obrok/aleph-v0.9.41-wasmtime8" }
frame-system = { git = "https://github.com/Cardinal-Cryptography/substrate", default-features = false , branch = "obrok/aleph-v0.9.41-wasmtime8" }
pallet-transaction-payment = { git = "https://github.com/Cardinal-Cryptography/substrate", default-features = false , branch = "obrok/aleph-v0.9.41-wasmtime8" }
log = { version = "0.4.17", default-features = false }

# Polkadot dependencies
polkadot-parachain = { path = "../../parachain", default-features = false }

[dev-dependencies]
primitive-types = "0.12.1"
pallet-balances = { git = "https://github.com/Cardinal-Cryptography/substrate", branch = "obrok/aleph-v0.9.41-wasmtime8" }
pallet-xcm = { path = "../pallet-xcm" }
polkadot-runtime-parachains = { path = "../../runtime/parachains" }
assert_matches = "1.5.0"

[features]
default = ["std"]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks"
]
std = [
	"log/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"xcm/std",
	"xcm-executor/std",
	"sp-std/std",
	"sp-arithmetic/std",
	"sp-io/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"polkadot-parachain/std",
	"pallet-transaction-payment/std",
]
