[package]
name = "test-parachain-halt"
description = "Test parachain which executes forever"
build = "build.rs"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/Cardinal-Cryptography/substrate", branch = "obrok/aleph-v0.9.41-wasmtime8" }

[features]
default = [ "std" ]
std = []
