[package]
name = "polkadot-runtime-constants"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
smallvec = "1.8.0"

frame-support = { git = "https://github.com/Cardinal-Cryptography/substrate", default-features = false , branch = "obrok/aleph-v0.9.41-wasmtime8" }
primitives = { package = "polkadot-primitives", path = "../../../primitives", default-features = false }
runtime-common = { package = "polkadot-runtime-common", path = "../../common", default-features = false }
sp-runtime = { git = "https://github.com/Cardinal-Cryptography/substrate", default-features = false , branch = "obrok/aleph-v0.9.41-wasmtime8" }
sp-weights = { git = "https://github.com/Cardinal-Cryptography/substrate", default-features = false , branch = "obrok/aleph-v0.9.41-wasmtime8" }
sp-core = { git = "https://github.com/Cardinal-Cryptography/substrate", default-features = false , branch = "obrok/aleph-v0.9.41-wasmtime8" }

[features]
default = ["std"]
std = [
	"frame-support/std",
	"primitives/std",
	"runtime-common/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-weights/std"
]
